--- a/partials/drivers.html
+++ b/partials/drivers.html
@@ -1,11 +1,10 @@
 <table class="table drivertable">
   <tr>
-    <td><h3>Driver Standings</h3></td>
-    <td></td>
+    <td colspan="4"><h3>Driver Standings</h3></td>
   </tr>
-  <tr ng-repeat="driver in driverStandings">
+  <tr ng-repeat="driver in drivers">
     <td>{{driver.position}}</td>
-    <td>{{driver.givenName}} {{driver.familyName}}</td>
+    <td>{{driver.Driver.givenName}} {{driver.Driver.familyName}}</td>
     <td>{{driver.points}}</td>
     <td>{{driver.wins}}</td>
     <td>
