tweak to base url

--- a/partials/driver-view.html
+++ b/partials/driver-view.html
@@ -1,6 +1,6 @@
 <table class="table drivertable">
   <tr>
-    <td><h3>Details for {{driver.givenName}} {{driver.familyName}}</h3></td>
+    <td><h3>Details for {{driver.Driver.givenName}} {{driver.familyName}}</h3></td>
     <td></td>
   </tr>
   <tr>
@@ -21,5 +21,5 @@
   </tr>
 </table>
 <div>
-  
+
 </div>
