added driver details

--- a/partials/drivers.html
+++ b/partials/drivers.html
@@ -2,6 +2,23 @@
   <tr>
     <td colspan="4"><h3>Driver Standings</h3></td>
   </tr>
+  <tr>
+    <th>
+      Position
+    </th>
+    <th>
+      Name
+    </th>
+    <th>
+      Points
+    </th>
+    <th>
+      Wins
+    </th>
+    <th>
+      
+    </th>
+  </tr>
   <tr ng-repeat="driver in drivers">
     <td>{{driver.position}}</td>
     <td>{{driver.Driver.givenName}} {{driver.Driver.familyName}}</td>
