linked flags to nationality

--- a/partials/drivers.html
+++ b/partials/drivers.html
@@ -3,25 +3,14 @@
     <td colspan="4"><h3>Driver Standings</h3></td>
   </tr>
   <tr>
-    <th>
-      Position
-    </th>
-    <th>
-      Name
-    </th>
-    <th>
-      Points
-    </th>
-    <th>
-      Wins
-    </th>
-    <th>
-      
-    </th>
+    <th>Position</th>
+    <th>Name</th>
+    <th>Points</th>
+    <th colspan="2">Wins</th>
   </tr>
   <tr ng-repeat="driver in drivers">
     <td>{{driver.position}}</td>
-    <td>{{driver.Driver.givenName}} {{driver.Driver.familyName}}</td>
+    <td><img src="http://jewkesy.github.io/colloquial/images/flags/{{driver.Driver.nationality}}.png" />  {{driver.Driver.givenName}} {{driver.Driver.familyName}}</td>
     <td>{{driver.points}}</td>
     <td>{{driver.wins}}</td>
     <td>
