--- a/partials/driver-view.html
+++ b/partials/driver-view.html
@@ -5,7 +5,7 @@
   </tr>
   <tr>
     <td>DOB</td>
-    <td>{{driver.dateOfBirth}}</td>
+    <td>{{driver.dateOfBirth  | date:'MMM d, y' }}</td>
   </tr>
   <tr>
     <td>Nationality</td>
