correct use of img src in angular

--- a/partials/drivers.html
+++ b/partials/drivers.html
@@ -11,7 +11,7 @@
   </tr>
   <tr ng-repeat="driver in drivers">
     <td>{{driver.position}}</td>
-    <td><img src="http://jewkesy.github.io/colloquial/images/flags/{{driver.Driver.nationality}}.png" /> {{driver.Driver.givenName}} {{driver.Driver.familyName}}</td>
+    <td><img ng-src="http://jewkesy.github.io/colloquial/images/flags/{{driver.Driver.nationality}}.png" /> {{driver.Driver.givenName}} {{driver.Driver.familyName}}</td>
     <td>{{driver.points}}</td>
     <td>{{driver.wins}}</td>
     <td><a target="_blank" ng-href="{{driver.Constructors[0].url}}"/>{{driver.Constructors[0].name}}</td>
