--- a/partials/driver-view.html
+++ b/partials/driver-view.html
@@ -9,7 +9,7 @@
   </tr>
   <tr>
     <td>Nationality</td>
-    <td><img src="http://jewkesy.github.io/colloquial/images/flags/{{driver.nationality}}.png" /> {{driver.nationality}}</td>
+    <td><img ng-src="http://jewkesy.github.io/colloquial/images/flags/{{driver.nationality}}.png" /> {{driver.nationality}}</td>
   </tr>
   <tr>
     <td>Number</td>
