made name clickable, rather than button

--- a/partials/drivers.html
+++ b/partials/drivers.html
@@ -7,16 +7,13 @@
     <th>Name</th>
     <th>Points</th>
     <th>Team</th>
-    <th colspan="2">Wins</th>
+    <th>Wins</th>
   </tr>
   <tr ng-repeat="driver in drivers">
     <td>{{driver.position}}</td>
-    <td><img ng-src="http://jewkesy.github.io/colloquial/images/flags/{{driver.Driver.nationality}}.png" /> {{driver.Driver.givenName}} {{driver.Driver.familyName}}</td>
+    <td><img ng-src="http://jewkesy.github.io/colloquial/images/flags/{{driver.Driver.nationality}}.png" /> <a ui-sref="viewDriver({id:driver.Driver.driverId})">{{driver.Driver.givenName}} {{driver.Driver.familyName}}</a></td>
     <td>{{driver.points}}</td>
     <td>{{driver.wins}}</td>
     <td><a target="_blank" ng-href="{{driver.Constructors[0].url}}"/>{{driver.Constructors[0].name}}</td>
-    <td>
-      <a class="btn btn-primary" ui-sref="viewDriver({id:driver.Driver.driverId})">View</a>
-    </td>
   </tr>
 </table>
