--- a/partials/drivers.html
+++ b/partials/drivers.html
@@ -1,6 +1,6 @@
 <table class="table drivertable">
   <tr>
-    <td colspan="4"><h3>Driver Standings</h3></td>
+    <td colspan="5"><h3>Formula 1<span class="divider">.:.</span>2014<span class="divider">.:.</span>Driver Standings</h3></td>
   </tr>
   <tr>
     <th>Position</th>
