--- a/partials/driver-view.html
+++ b/partials/driver-view.html
@@ -1,7 +1,7 @@
 <table class="table drivertable">
   <tr>
     <td><h3>Details for {{driver.givenName}} {{driver.familyName}}</h3></td>
-    <td></td>
+    <td><img ng-src="{{ getProfilePic(driver.wikiName) }}" /></td>
   </tr>
   <tr>
     <td>DOB</td>
@@ -9,7 +9,7 @@
   </tr>
   <tr>
     <td>Nationality</td>
-    <td><img ng-src="http://jewkesy.github.io/colloquial/images/flags/{{driver.nationality}}.png" /> {{driver.nationality}}</td>
+    <td><img ng-src="{{driver.flagUrl}}" /> {{driver.nationality}}</td>
   </tr>
   <tr>
     <td>Number</td>
@@ -20,6 +20,3 @@
     <td><a target="_blank" ng-href="{{driver.url}}"/>{{driver.url}}</td>
   </tr>
 </table>
-<div>
-
-</div>
