tweak to img logic

--- a/partials/driver-view.html
+++ b/partials/driver-view.html
@@ -1,7 +1,7 @@
 <table class="table drivertable">
   <tr>
     <td><h3>Details for {{driver.givenName}} {{driver.familyName}}</h3></td>
-    <td><img ng-src="{{ getProfilePic(driver.wikiName) }}" /></td>
+    <td><img ng-src="{{ driver.imageUrl }}" /></td>
   </tr>
   <tr>
     <td>DOB</td>
