--- a/partials/circuits.html
+++ b/partials/circuits.html
@@ -19,8 +19,7 @@
   </tr>
   <tr ng-repeat="circuit in circuits.Circuits">
     <td>{{circuit.circuitName}}</td>
-    <!-- <td><img ng-src="http://jewkesy.github.io/colloquial/images/flags/{{driver.Driver.nationality}}.png" /> <a ui-sref="viewDriver({id:driver.Driver.driverId})">{{driver.Driver.givenName}} {{driver.Driver.familyName}}</a></td> -->
     <td>{{circuit.Location.locality}}, {{circuit.Location.country}}</td>
-    <td><a target="_blank" ng-href="{{circuit.url}}"/>{{circuit.url}}</td>
+    <td><a target="_blank" ng-href="{{circuit.url}}"/>Wiki Link</td>
   </tr>
 </table>
