added location bar updates

--- a/partials/drivers.html
+++ b/partials/drivers.html
@@ -16,8 +16,8 @@
     <th>Position</th>
     <th>Name</th>
     <th>Points</th>
-    <th>Team</th>
     <th>Wins</th>
+    <th>Constructor</th>
   </tr>
   <tr ng-repeat="driver in drivers.DriverStandings">
     <td>{{driver.position}}</td>
