--- a/partials/circuits.html
+++ b/partials/circuits.html
@@ -18,7 +18,7 @@
     <th>Link</th>
   </tr>
   <tr ng-repeat="circuit in circuits.Circuits">
-    <td>{{circuit.circuitName}}</td>
+    <td><a ui-sref="viewCircuit({id: circuit.circuitId})">{{circuit.circuitName}}</a></td>
     <td>{{circuit.Location.locality}}, {{circuit.Location.country}}</td>
     <td><a target="_blank" ng-href="{{circuit.url}}"/>Wiki Link</td>
   </tr>
