driver view tweak

--- a/partials/driver-view.html
+++ b/partials/driver-view.html
@@ -16,7 +16,6 @@
     <td>{{driver.permanentNumber}}</td>
   </tr>
   <tr>
-    <td>Wiki Link</td>
-    <td><a target="_blank" ng-href="{{driver.url}}"/>{{driver.url}}</td>
+    <td colspan=2><a target="_blank" ng-href="{{driver.url}}"/>Wiki Link</td>
   </tr>
 </table>
