starting to look at driver results format

--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,9 @@ body {
   font-size: 1em;
   font-family: 'Roboto', sans-serif,  Arial, "Helvetica Condensed", Helvetica, sans-serif;
 }
+
+.item {
+  border: 1px red solid;
+  float: left;
+  margin: 10px
+}
