looking at isotope

--- a/partials/result-view.html
+++ b/partials/result-view.html
@@ -23,12 +23,12 @@
   </tr>
 </table>
 
-<!-- <div class="sort-by button-group js-radio-button-group">
+<div class="sort-by button-group js-radio-button-group">
   <button class="button is-checked" data-sort-by="position">Race Results</button>
   <button class="button" data-sort-by="grid">Starting Grid</button>
   <button class="button" data-sort-by="practice">Qualifier</button>
   <button class="button" data-sort-by="number">Practice</button>
-</div> -->
+</div>
 
 <div id="isotopeContainer" ng-repeat="race in results.Races[0].Results">
   <div class="item">
