updates to page titles

--- a/partials/schedule.html
+++ b/partials/schedule.html
@@ -9,7 +9,7 @@
           </li>
         </ul>
       </span>
-      <span class="divider">.:.</span>Schedule</h3>
+      <span class="divider">.:.</span>Race Schedule</h3>
     </td>
   </tr>
   <tr>
