--- a/partials/result-view.html
+++ b/partials/result-view.html
@@ -17,8 +17,7 @@
           </li>
         </ul>
       </span>
-      <span class="divider">.:.</span> {{ results.Races[0].raceName }}
-      <span class="divider">.:.</span> Results</h3>
+      <span class="divider">.:.</span> {{ results.Races[0].raceName }}</h3>
     </td>
   </tr>
 </table>
