--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,45 @@ body {
 }
 
 .item {
-  border: 1px red solid;
+  border: 1px  #8585AD solid;
   float: left;
-  margin: 10px
+  padding: 10px;
+  margin: 10px;
+  border-radius: 25px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  text-align: center;
+  /*background-image: url(/images/helmet-icon.png);
+  opacity : 0.2;*/
 }
 
-.position {
-  font-size: 8em;
+.item .position {
+  font-size: 10em;
+  font-weight: bold;
+  color: #8585AD;
+  width: 100%;
+  display: inline-block;
+  margin: 0px;
+  height: 170px;
+}
+
+.item .lastName {
+  font-size: 3em;
+  margin: 0px;
+}
+
+.item .firstName {
+  font-size: 1.2em;
+  font-style: italic;
+  text-align: left;
+  margin-top:-10px;
+}
+
+.item .status {
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+.item .raceTime {
+
 }
