--- a/partials/schedule.html
+++ b/partials/schedule.html
@@ -1,6 +1,4 @@
-<table class="table scheduletable">
-  <tr>
-    <td colspan="5"><h3>Formula 1<span class="divider"> .:. </span>
+<h3>Formula 1<span class="divider"> .:. </span>
       <span class="dropdown">
         <a class="btn btn-default" data-toggle="dropdown" href="#">{{ season }} <b class="caret"></b></a>
         <ul ng-model="seasonSelection" class="dropdown-menu" role="menu" aria-labelledby="dropdownYear">
@@ -10,8 +8,8 @@
         </ul>
       </span>
       <span class="divider"> .:. </span>Race Schedule</h3>
-    </td>
-  </tr>
+
+  <table class="table table-striped table-bordered table-hover table-condensed">
   <tr>
     <th>Round</th>
     <th>Name</th>
