--- a/partials/driver-view.html
+++ b/partials/driver-view.html
@@ -1,6 +1,6 @@
 <table class="table drivertable">
   <tr>
-    <td><h3>Details for {{driver.givenName}} {{driver.familyName}}</h3></td>
+    <td><h3>{{driver.givenName}} {{driver.familyName}}</h3></td>
     <td><img ng-src="{{ driver.imageUrl }}" /></td>
   </tr>
   <tr>
