--- a/partials/driver-view.html
+++ b/partials/driver-view.html
@@ -1,11 +1,11 @@
 <table class="table drivertable">
   <tr>
-    <td><h3>{{driver.givenName}} {{driver.familyName}}</h3></td>
+    <td><h3>{{driver.givenName}} {{driver.familyName}}</h3>{{driver.Age}} years old {{driver.points}}</td>
     <td><img ng-src="{{ driver.imageUrl }}" /></td>
   </tr>
   <tr>
     <td>DOB</td>
-    <td>{{driver.dateOfBirth | date:'MMM d, y'}} ({{driver.Age}} years old)</td>
+    <td>{{driver.dateOfBirth | date:'MMM d, y'}}</td>
   </tr>
   <tr>
     <td>Nationality</td>
