--- a/partials/drivers.html
+++ b/partials/drivers.html
@@ -1,5 +1,5 @@
 
-  <h3>Formula 1<span class="divider"> .:. </span>
+  <h3>Driver Standings<span class="divider"> .:. </span>
       <span class="dropdown">
         <a class="btn btn-default" data-toggle="dropdown" href="#">{{ season }} <b class="caret"></b></a>
         <ul ng-model="seasonSelection" class="dropdown-menu" role="menu" aria-labelledby="dropdownYear">
@@ -7,8 +7,7 @@
             <a ng-click="$parent.season = year">{{year}}</a>
           </li>
         </ul>
-      </span>
-      <span class="divider"> .:. </span>Driver Standings</h3>
+      </span></h3>
 
   <table class="table table-striped table-bordered table-hover table-condensed">
   <tr>
