--- a/css/style.css
+++ b/css/style.css
@@ -52,5 +52,10 @@ body {
 }
 
 .mainPic img {
-  border: 1px  #8585AD solid;
+  border: 1px #8585AD solid;
+}
+
+.divider {
+  font-size:0.8em;
+  color: #8585AD;
 }
