--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,9 @@ body {
   font-size:0.8em;
   color: #8585AD;
 }
+
+.scrollable-menu {
+    height: auto;
+    max-height: 300px;
+    overflow-x: hidden;
+}
