--- a/partials/circuit-view.html
+++ b/partials/circuit-view.html
@@ -1,17 +1,44 @@
-<table class="table circuitable">
+<!-- <table class="table circuitable">
   <tr>
-    <td colspan="2"><h3>{{circuit.circuitName}}</h3></td>
+    <td colspan="2"><h3>{{circuit.circuitName}} .:. {{circuit.Location.locality}}, {{circuit.Location.country}}</h3></td>
   </tr>
   <tr>
-    <td class="mainPic" colspan="2">
+    <td>
+      <table>
+        <tr>
+          <td>
+            Length:
+          </td>
+          <td>
+            {{circuit.details.trackLength}}
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Turns:
+          </td>
+          <td>
+            {{circuit.details.turns}}
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Record Time:
+          </td>
+          <td>
+            {{circuit.details.recordTime}}
+          </td>
+        </tr>
+      </table>
+    </td>
+    <td class="mainPic">
       <img ng-src="{{circuit.imageUrl}}" />
     </td>
   </tr>
   <tr>
-    <td>Location</td>
-    <td>{{circuit.Location.locality}}, {{circuit.Location.country}}</td>
-  </tr>
-  <tr>
     <td colspan="2"><a target="_blank" ng-href="{{circuit.url}}"/>Wiki Link</td>
   </tr>
-</table>
+</table> -->
+<div ng-bind-html="circuit.details">
+
+</div>
