--- a/partials/constructors.html
+++ b/partials/constructors.html
@@ -1,3 +1,7 @@
+<div ng-hide="content_loaded">
+  Just grabbing your data...
+</div>
+<div ng-show="content_loaded">
   <h3>Constructor Standings<span class="divider"> .:. </span>
       <span class="dropdown">
         <a class="btn btn-default" data-toggle="dropdown" href="#">{{ season }} <b class="caret"></b></a>
@@ -9,16 +13,17 @@
       </span></h3>
 
   <table class="table table-striped table-bordered table-hover table-condensed">
-  <tr>
-    <th>Position</th>
-    <th>Name</th>
-    <th>Points</th>
-    <th>Wins</th>
-  </tr>
-  <tr ng-repeat="team in teams.ConstructorStandings">
-    <td>{{team.position}}</td>
-    <td><img ng-src="http://jewkesy.github.io/colloquial/images/flags/{{team.Constructor.nationality}}.png" /> <a ui-sref="viewConstructor({id:team.Constructor.constructorId})">{{team.Constructor.name}}</a></td>
-    <td>{{team.points}}</td>
-    <td>{{team.wins}}</td>
-  </tr>
-</table>
+    <tr>
+      <th>Position</th>
+      <th>Name</th>
+      <th>Points</th>
+      <th>Wins</th>
+    </tr>
+    <tr ng-repeat="team in teams.ConstructorStandings">
+      <td>{{team.position}}</td>
+      <td><img ng-src="http://jewkesy.github.io/colloquial/images/flags/{{team.Constructor.nationality}}.png" /> <a ui-sref="viewConstructor({id:team.Constructor.constructorId})">{{team.Constructor.name}}</a></td>
+      <td>{{team.points}}</td>
+      <td>{{team.wins}}</td>
+    </tr>
+  </table>
+</div>
