--- a/partials/driver-view.html
+++ b/partials/driver-view.html
@@ -1,21 +1,26 @@
-<table class="table drivertable">
-  <tr>
-    <td><h3>{{driver.givenName}} {{driver.familyName}}</h3>{{driver.Age}} years old {{driver.points}}</td>
-    <td><img ng-src="{{ driver.imageUrl }}" /></td>
-  </tr>
-  <tr>
-    <td>DOB</td>
-    <td>{{driver.dateOfBirth | date:'MMM d, y'}}</td>
-  </tr>
-  <tr>
-    <td>Nationality</td>
-    <td><img ng-src="{{driver.flagUrl}}" /> {{driver.nationality}}</td>
-  </tr>
-  <tr>
-    <td>Number</td>
-    <td>{{driver.permanentNumber}}</td>
-  </tr>
-  <tr>
-    <td colspan=2><a target="_blank" ng-href="{{driver.url}}"/>Wiki Link</td>
-  </tr>
-</table>
+<div ng-hide="content_loaded">
+  Just grabbing your data...
+</div>
+<div ng-show="content_loaded">
+  <table class="table drivertable">
+    <tr>
+      <td><h3>{{driver.givenName}} {{driver.familyName}}</h3>{{driver.Age}} years old {{driver.points}}</td>
+      <td><img ng-src="{{ driver.imageUrl }}" /></td>
+    </tr>
+    <tr>
+      <td>DOB</td>
+      <td>{{driver.dateOfBirth | date:'MMM d, y'}}</td>
+    </tr>
+    <tr>
+      <td>Nationality</td>
+      <td><img ng-src="{{driver.flagUrl}}" /> {{driver.nationality}}</td>
+    </tr>
+    <tr>
+      <td>Number</td>
+      <td>{{driver.permanentNumber}}</td>
+    </tr>
+    <tr>
+      <td colspan=2><a target="_blank" ng-href="{{driver.url}}"/>Wiki Link</td>
+    </tr>
+  </table>
+</div>
