--- a/partials/drivers.html
+++ b/partials/drivers.html
@@ -1,26 +1,31 @@
-  <h3>Driver Standings<span class="divider"> .:. </span>
-      <span class="dropdown">
-        <a class="btn btn-default" data-toggle="dropdown" href="#">{{ season }} <b class="caret"></b></a>
-        <ul ng-model="seasonSelection" class="dropdown-menu scrollable-menu" role="menu" aria-labelledby="dropdownYear">
-          <li ng-repeat="year in years">
-            <a ng-click="$parent.season = year">{{year}}</a>
-          </li>
-        </ul>
-      </span></h3>
+<div ng-hide="content_loaded">
+  Just grabbing your data...
+</div>
+<div ng-show="content_loaded">
+    <h3>Driver Standings<span class="divider"> .:. </span>
+        <span class="dropdown">
+          <a class="btn btn-default" data-toggle="dropdown" href="#">{{ season }} <b class="caret"></b></a>
+          <ul ng-model="seasonSelection" class="dropdown-menu scrollable-menu" role="menu" aria-labelledby="dropdownYear">
+            <li ng-repeat="year in years">
+              <a ng-click="$parent.season = year">{{year}}</a>
+            </li>
+          </ul>
+        </span></h3>
 
-  <table class="table table-striped table-bordered table-hover table-condensed">
-  <tr>
-    <th>Position</th>
-    <th>Name</th>
-    <th>Points</th>
-    <th>Wins</th>
-    <th>Constructor</th>
-  </tr>
-  <tr ng-repeat="driver in drivers.DriverStandings">
-    <td>{{driver.position}}</td>
-    <td><img ng-src="http://jewkesy.github.io/colloquial/images/flags/{{driver.Driver.nationality}}.png" /> <a ui-sref="viewDriver({id:driver.Driver.driverId, points:driver.points})">{{driver.Driver.givenName}} {{driver.Driver.familyName}}</a></td>
-    <td>{{driver.points}}</td>
-    <td>{{driver.wins}}</td>
-    <td><a ui-sref="viewConstructor({id:driver.Constructors[0].constructorId})">{{driver.Constructors[0].name}}</td>
-  </tr>
-</table>
+    <table class="table table-striped table-bordered table-hover table-condensed">
+    <tr>
+      <th>Position</th>
+      <th>Name</th>
+      <th>Points</th>
+      <th>Wins</th>
+      <th>Constructor</th>
+    </tr>
+    <tr ng-repeat="driver in drivers.DriverStandings">
+      <td>{{driver.position}}</td>
+      <td><img ng-src="http://jewkesy.github.io/colloquial/images/flags/{{driver.Driver.nationality}}.png" /> <a ui-sref="viewDriver({id:driver.Driver.driverId, points:driver.points})">{{driver.Driver.givenName}} {{driver.Driver.familyName}}</a></td>
+      <td>{{driver.points}}</td>
+      <td>{{driver.wins}}</td>
+      <td><a ui-sref="viewConstructor({id:driver.Constructors[0].constructorId})">{{driver.Constructors[0].name}}</td>
+    </tr>
+  </table>
+</div>
