--- a/partials/result-view.html
+++ b/partials/result-view.html
@@ -1,52 +1,57 @@
-<table class="table scheduletable">
-  <tr>
-    <td colspan="5"><h3>Formula 1<span class="divider"> .:. </span>
-      <span class="dropdown">
-        <a class="btn btn-default" data-toggle="dropdown" href="#">{{ season }} <b class="caret"></b></a>
-        <ul ng-model="seasonSelection" class="dropdown-menu" role="menu" aria-labelledby="dropdownYear">
-          <li ng-repeat="year in years">
-            <a ng-click="$parent.season = year">{{year}}</a>
-          </li>
-        </ul>
-      </span>
-      <span class="divider">.:.</span> Round <span class="dropdown">
-        <a class="btn btn-default" data-toggle="dropdown" href="#">{{ results.round }} <b class="caret"></b></a>
-        <ul ng-model="roundSelection" class="dropdown-menu" role="menu" aria-labelledby="dropdownRound">
-          <li ng-repeat="round in rounds">
-            <a ng-click="$parent.round = round">{{round}}</a>
-          </li>
-        </ul>
-      </span>
-      <span class="divider"> .:. </span> {{ results.Races[0].raceName }}</h3>
-    </td>
-  </tr>
-</table>
-
-<div class="btn-group" opt-kind ok-key="sortBy">
-  <button type="button" class="btn btn-default active" ok-sel="[position]">Race Results</button>
-  <button type="button" class="btn btn-default" ok-sel="[grid]" ok-type="integer">Starting Grid</button>
-  <button type="button" class="btn btn-default" ok-sel="[practice]" ok-type="integer">Qualifier</button>
-  <button type="button" class="btn btn-default" ok-sel="[number]" ok-type="integer">Practice</button>
+<div ng-hide="content_loaded">
+  Just grabbing your data...
 </div>
-
-        <!-- <div class="row">
-          <ul id="isotopeContainer" isotope-container ng-cloak class="ng-cloak">
-            <li ng-repeat="race in results.Races[0].Results" isotope-item class="item" onClick="removeItem(this)">
-               <div class="position" position="{{race.position}}">Position: {{race.position}}</div>
-               <div class="grid" grid="{{race.grid}}">Grid: {{race.grid}}</div>
-               <div class="number">{{race.Driver.familyName}}</div>
+<div ng-show="content_loaded">
+  <table class="table scheduletable">
+    <tr>
+      <td colspan="5"><h3>Formula 1<span class="divider"> .:. </span>
+        <span class="dropdown">
+          <a class="btn btn-default" data-toggle="dropdown" href="#">{{ season }} <b class="caret"></b></a>
+          <ul ng-model="seasonSelection" class="dropdown-menu" role="menu" aria-labelledby="dropdownYear">
+            <li ng-repeat="year in years">
+              <a ng-click="$parent.season = year">{{year}}</a>
             </li>
-        </div> -->
+          </ul>
+        </span>
+        <span class="divider">.:.</span> Round <span class="dropdown">
+          <a class="btn btn-default" data-toggle="dropdown" href="#">{{ results.round }} <b class="caret"></b></a>
+          <ul ng-model="roundSelection" class="dropdown-menu" role="menu" aria-labelledby="dropdownRound">
+            <li ng-repeat="round in rounds">
+              <a ng-click="$parent.round = round">{{round}}</a>
+            </li>
+          </ul>
+        </span>
+        <span class="divider"> .:. </span> {{ results.Races[0].raceName }}</h3>
+      </td>
+    </tr>
+  </table>
 
-<div  id="isotopeContainer" isotope-container>
-  <div ng-repeat="race in results.Races[0].Results">
-    <div class="item">
-      <span class="position">{{race.position}}</span>
-      <p class="lastName"><a ui-sref="viewDriver({id:race.Driver.driverId})">{{race.Driver.familyName}}</a></p>
-      <p class="firstName">{{race.Driver.givenName}}</p>
-      <hr/>
-      <p class="status">{{race.status}}</p>
-      <p class="raceTime">{{race.Time.time}}</p>
+  <div class="btn-group" opt-kind ok-key="sortBy">
+    <button type="button" class="btn btn-default active" ok-sel="[position]">Race Results</button>
+    <button type="button" class="btn btn-default" ok-sel="[grid]" ok-type="integer">Starting Grid</button>
+    <button type="button" class="btn btn-default" ok-sel="[practice]" ok-type="integer">Qualifier</button>
+    <button type="button" class="btn btn-default" ok-sel="[number]" ok-type="integer">Practice</button>
+  </div>
+
+          <!-- <div class="row">
+            <ul id="isotopeContainer" isotope-container ng-cloak class="ng-cloak">
+              <li ng-repeat="race in results.Races[0].Results" isotope-item class="item" onClick="removeItem(this)">
+                 <div class="position" position="{{race.position}}">Position: {{race.position}}</div>
+                 <div class="grid" grid="{{race.grid}}">Grid: {{race.grid}}</div>
+                 <div class="number">{{race.Driver.familyName}}</div>
+              </li>
+          </div> -->
+
+  <div  id="isotopeContainer" isotope-container>
+    <div ng-repeat="race in results.Races[0].Results">
+      <div class="item">
+        <span class="position">{{race.position}}</span>
+        <p class="lastName"><a ui-sref="viewDriver({id:race.Driver.driverId})">{{race.Driver.familyName}}</a></p>
+        <p class="firstName">{{race.Driver.givenName}}</p>
+        <hr/>
+        <p class="status">{{race.status}}</p>
+        <p class="raceTime">{{race.Time.time}}</p>
+      </div>
     </div>
   </div>
 </div>
