removed debug stamps

--- a/partials/schedule.html
+++ b/partials/schedule.html
@@ -16,7 +16,7 @@
     <tr>
       <th>Round</th>
       <th>Name / Circuit / Date</th>
-      <th colspan="2">Details {{currentDate}}</th>
+      <th colspan="2">Details</th>
     </tr>
     <tr ng-repeat="race in schedule.Races">
       <td>{{race.round}} </td>
