--- a/partials/result-view.html
+++ b/partials/result-view.html
@@ -44,7 +44,7 @@
 
   <div  id="isotopeContainer" isotope-container>
     <div ng-repeat="race in results.Races[0].Results">
-      <div class="item">
+      <div ng-class="{pole: race.position==1}" class="item">
         <span class="position">{{race.position}}</span>
         <p class="lastName"><a ui-sref="viewDriver({id:race.Driver.driverId})">{{race.Driver.familyName}}</a></p>
         <p class="firstName">{{race.Driver.givenName}}</p>
