--- a/partials/result-view.html
+++ b/partials/result-view.html
@@ -30,7 +30,7 @@
     <button type="button" class="btn btn-default active" ok-sel="[position]">Race Results</button>
     <button type="button" class="btn btn-default" ok-sel="[grid]" ok-type="integer">Starting Grid</button>
     <button type="button" class="btn btn-default" ok-sel="[practice]" ok-type="integer">Qualifier</button>
-    <button type="button" class="btn btn-default" ok-sel="[number]" ok-type="integer">Practice</button>
+<!--     <button type="button" class="btn btn-default" ok-sel="[number]" ok-type="integer">Practice</button> -->
   </div>
 
           <!-- <div class="row">
